--- a/Articles/ProductModule.csproj
+++ b/Articles/ProductModule.csproj
@@ -7,7 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\FreeMarket.Domain\FreeMarket.Domain.csproj" />
+    <ProjectReference Include="..\StoreApiRepository\StoreApiRepository.csproj" />
   </ItemGroup>
 
 </Project>
