--- a/FreeMarket/appsettings.json
+++ b/FreeMarket/appsettings.json
@@ -7,6 +7,7 @@
   },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "db": ""
+        "db": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=FreeMarket.DB;Integrated Security=True;Persist Security Info=False;Pooling=False;Multiple Active Result Sets=False;Connect Timeout=60;Encrypt=False;Trust Server Certificate=False;Command Timeout=0",
+        "storeApi": "https://fakestoreapi.com"
     }
 }
