--- a/StoreApiRepository/StoreApiRepository.csproj
+++ b/StoreApiRepository/StoreApiRepository.csproj
@@ -7,9 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Articles\ProductModule.csproj" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\FreeMarket.Domain\FreeMarket.Domain.csproj" />
-    <ProjectReference Include="..\SqlServerRepository\SqlServerRepository.csproj" />
   </ItemGroup>
 
 </Project>
