--- a/StoreApiRepositoryTests/appsettings.json
+++ b/StoreApiRepositoryTests/appsettings.json
@@ -8,6 +8,6 @@
     "AllowedHosts": "*",
     "ConnectionStrings": {
         "db": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=FreeMarket.DB;Integrated Security=True;Persist Security Info=False;Pooling=False;Multiple Active Result Sets=False;Connect Timeout=60;Encrypt=False;Trust Server Certificate=False;Command Timeout=0",
-        "storeApi": "https://fakestoreapi.com"
+        "storeApi": "https://test-domain.com"
     }
 }
